[package]
name = "maestro"
version = "0.1.0"
authors = ["Skynõx <0x536b796ec3b578@proton.me>"]
edition = "2024"
repository = "https://github.com/0x536b796ec3b578/maestro"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
getifaddrs = "0.6.0"
rand = "0.9.2"
socket2 = "0.6.1"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt", "signal", "time"] }
tokio-util = "0.7.17"
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
