[package]
name = "maestro-rs"
version = "0.2.0"
authors = ["Skynõx <0x536b796ec3b578@proton.me>"]
edition = "2024"
repository = "https://github.com/0x536b796ec3b578/maestro"
license = "MIT"
description = "A lightweight, fast, and ergonomic framework for building TCP & UDP servers in Rust with zero boilerplate."
readme = "README.md"
keywords = [
    "networking",
    "tcp",
    "udp",
    "concurrency",
    "tokio"
]
categories = [
    "network-programming",
    "asynchronous",
    "concurrency",
    "api-bindings",
]

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
async-trait = "0.1.89"
getifaddrs = "0.6.0"
num_cpus = "1.17.0"
rand = "0.9.2"
socket2 = "0.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[bench]]
name = "bench_tcp"
harness = false

[[bench]]
name = "bench_udp"
harness = false
